--- a/TechnoStyleApp/templates/TechnoStyleApp/base.html
+++ b/TechnoStyleApp/templates/TechnoStyleApp/base.html
@@ -18,12 +18,12 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Techno Style</a>
+                <a class="navbar-brand" href="{% url 'inicio'%}">Techno Style</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'inicio'%}">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'buscar_productos'%}">Buscar Productos</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="{% url 'buscar_productos'%}">Buscar Productos</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Agregar</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -35,15 +35,28 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
-                        <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
-                    </form>
                 </div>
             </div>
+            
+            {% if user.is_authenticated%}
+            <div><h3>Bienvenido!!</h3></div>
+            <div class="container px-4 px-lg-5 d-flex">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'logout'%}">Cerrar Sesion</a></li>
+                    </ul>
+                </div>
+            </div>
+            {%else%}
+            <div class="container px-4 px-lg-5 d-flex">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login'%}">Iniciar Sesion</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="{% url 'register'%}">Registrarse</a></li>
+                    </ul>
+                </div>
+            </div>
+            {%endif%}
         </nav>
         <!-- Header-->
         <header class="bg-dark py-5">
