--- a/TechnoStyleApp/templates/TechnoStyleApp/base.html
+++ b/TechnoStyleApp/templates/TechnoStyleApp/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Shop Homepage - Start Bootstrap Template</title>
+        <title>TechnoStyle</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -24,22 +24,13 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'inicio'%}">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link active" href="{% url 'buscar_productos'%}">Buscar Productos</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Agregar</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{% url 'agregar-productos' %}">Producto</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="{% url 'agregar_cliente' %}">Cliente</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="{% url 'agregar_sucursal' %}">Sucursal</a></li>
-                            </ul>
-                        </li>
+                        <li class="nav-item"><a class="nav-link active" href="{% url 'agregar-productos'%}">Agregar Productos</a></li>
                     </ul>
                 </div>
             </div>
             
             {% if user.is_authenticated%}
-            <div><h3>Bienvenido!!</h3></div>
+            <div><p><strong>Bienvenido!!</strong></p><p><i>{{request.user.username}}</i></p></div>
             <div class="container px-4 px-lg-5 d-flex">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
